--- a/src/Feature/Navigation/code/Views/PSWebsite/Navigation/TopHeaderBar.cshtml
+++ b/src/Feature/Navigation/code/Views/PSWebsite/Navigation/TopHeaderBar.cshtml
@@ -4,7 +4,7 @@
 @{
     Layout = null;
 }
-<div class="top-header-bar
+<div class="top-header-bar">
     <div class="container">
         <div class="row flex-wrap justify-content-center justify-content-lg-between align-items-lg-center">
             <div class="col-12 col-lg-8 d-none d-md-flex flex-wrap justify-content-center justify-content-lg-start mb-3 mb-lg-0">
